# FYOrbitalAlgorithmToolkit

./: .gitignore  CMakeList.txt  CMakeLists.txt  LICENSE.txt  OrbitAlgorithmToolkit.cpp  README.md
include/oatCore/: oat_config.h  oat_geometry_types.h  oat_math_const.h  oat_physics_const.h  orbitmodel.h  orbitmodel_sgp4.h
include/oatCore/coord/: coord_def.h
include/oatCore/math/: math_def.h
src/oatCore/: CMakeList.txt  CMakeLists.txt  orbit_model.cpp  orbit_model.h  orbitmodel.cpp  orbitmodel.h  orbitmodel_sgp4.cpp
src/oatCore/coord/: cls_PolarCoordinates.cpp  cls_PolarCoordinates.h  cls_orbit.cpp  cls_orbit.h  coord.cpp
src/oatCore/libsgp4/: SGP4.cpp
src/oatCore/math/: math.cpp
tests/: CMakeLists.txt  OpenGLEarth.hpp  test_orbitmodel.cpp
